[package]
name = "openvpn3-rs"
version = "0.0.1"
authors = ["Zach Schneider <hello@zacharyschneider.ca>"]
edition = "2021"
description = "D-Bus bindings for OpenVPN3."
readme = "README.md"
repository = "https://github.com/zaxbux/openvpn3-rs"
license = "MIT OR Apache-2.0"
keywords = ["linux", "dbus", "zbus", "openvpn"]
categories = ["os::linux-apis", "asynchronous"]

[dependencies]
async-std = "1.12.0"
enumflags2 = "0.7.5"
futures-util = "0.3.25"
serde = "1.0.152"
serde_json = "1.0.91"
serde_repr = "0.1.10"
static_assertions = "1.1.0"
zbus = "3.6.2"
